# clai

./: .gitignore  README.md  clai.example.json  install.sh  main.go  pyproject.toml  uninstall.sh
clai/: cli.py  go.mod
